booking ad user classes are updated